<resources>
    <string name="app_name">仪表监测系统</string>
    <string name="layout_login_et_username">请输入用户名</string>
    <string name="layout_login_cb_rem_username">记住用户</string>
    <string name="layout_login_et_password">请输入密码</string>
    <string name="layout_login_cb_auto">自动登陆</string>
    <string name="layout_login_btn_login">登 陆</string>
    <string name="content_authority">com.dh.flowmeter</string>
    <string name="sync_account_type">flowmeter.com</string>
    <string name="threshold_sp_name">threshold</string>
</resources>
