<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dh.flowmeter.LoginActivity">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/layout_login_et_username" />

    <CheckBox
        android:id="@+id/cb_rem_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/layout_login_cb_rem_username"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/et_username"
        android:inputType="numberPassword"
        android:hint="@string/layout_login_et_password"/>

    <CheckBox
        android:id="@+id/cb_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:text="@string/layout_login_cb_auto"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/et_password"
        android:text="@string/layout_login_btn_login" />

    <TextView
        android:id="@+id/tv_call_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/btn_login"
        android:gravity="right"
        android:text="联系管理员>"/>

</RelativeLayout>
